--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "axios": "^0.16.2",
     "element-ui": "^1.4.2",
     "less-loader": "^4.0.5",
     "style-loader": "^0.18.2",
     "vue": "^2.3.3",
+    "vue-resource": "^1.3.4",
     "vue-router": "^2.6.0"
   },
   "devDependencies": {
@@ -79,7 +81,7 @@
     "sinon": "^2.1.0",
     "sinon-chai": "^2.8.0",
     "url-loader": "^0.5.8",
-    "vue-loader": "^12.1.0",
+    "vue-loader": "^12.2.2",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.3.3",
     "webpack": "^2.6.1",
